2003-12-20  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/style/rd/rd_style.rb: bug fix. 

2003.12.19 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: set $KCODE to 'n'.

2003-12-19 Fri UECHI Yasumasa <uh@u.dhis.portside.net>
	* misc/style/rd/rd_style.rb: accept lower level headlines without upper level headlines.

2003.12.18 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: save theme conf before call header_proc.

2003.12.16 Takeru KOMORIYA <komoriya@paken.org>
	* tdiary.rb: do not count up last-modified when the diary disabled.

2003.12.16 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: accept fuzzy anchor style.

2003.12.11 TADA Tadashi <sho@spc.gr.jp>
	* skel/day.rhtml, skel/diary.rhtml: do not make link URL when access from bot.

2003.12.09 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: String#make_link replace space to '&nbsp;' only top of lines.

2003.12.01 TADA Tadashi <sho@spc.gr.jp>
	* misc/posttdiary.rb: support over 10 images. thanks jun.o.

2003.11.27 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: no 'Content-Type' in error message running on mod_ruby.
	* plugin/01sp.rb: sp.path can terminate by '/'.

2003.11.21 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: Url returned by base_url ends with '/'.

2003-11-21  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary.rb: remove tail '/' of base_url.

2003.11.19 Junichiro Kita <kita@kitaj.no-ip.com>
	* tdiary.rb: import base_url method from RWiki.

2003.11.18 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: run Plugin#apply_plugin under $SAFE = 4 when secure mode.

2003.11.17 TADA Tadashi <sho@spc.gr.jp>
	* dot.htaccess: move comment about YYYYMMDD.html access to html_anchor.rb plugin.
	* tdiary/lang/ja.rb: remove decoding of charref.
	* plugin/00default.rb: remove sub from hostname in comment_mail_send.

2003.11.14 TADA Tadashi <sho@spc.gr.jp>
	* misc/jtime.rb: removed. use plugin/jdate.rb.

2003.11.13 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.6.

2003.11.10 TADA Tadashi <sho@spc.gr.jp>